tests/ui/recursion/issue-26548-recursion-via-normalize.stderr
error: hi
  --> $DIR/issue-26548-recursion-via-normalize.rs:11:1
   |
LL | trait Mirror {
   | ------------ built-in `dyn Mirror<It = _>` implementation for this trait
...
LL | impl<T: ?Sized> Mirror for T {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ overlaps with this blanket impl
   |
   = note: `#[forbid(dyn_overlap)]` on by default

error[E0391]: cycle detected when computing layout of `core::option::Option<S>`
   |
   = note: ...which requires computing layout of `S`...
   = note: ...which requires computing layout of `core::option::Option<<S as Mirror>::It>`...
   = note: ...which again requires computing layout of `core::option::Option<S>`, completing the cycle
   = note: cycle used when computing layout of `core::option::Option<<S as Mirror>::It>`
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0391`.
